--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,24 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_edit">EditActivity</string>
     <string name="enter_entry">Please enter your tought here</string>
+    <string name="action_add_sample_data">Add sample data</string>
+    <string name="enter_note">Enter note</string>
+    <string name="delete_all">Delete all notes</string>
+    <string name="new_note">New note</string>
+    <string name="edit_note">Edit note</string>
+    <string name="delete">Delete</string>
+    <string name="title_activity_google_sign_in">GoogleSignInActivity</string>
+    <string name="signed_out">Signout</string>
+    <string name="google_title_text">Google</string>
+    <string name="disconnect">Disconnect</string>
+    <string name="sign_out">Signout</string>
+    <string name="loading">loading...</string>
+    <string name="google_status_fmt">Google User: %s</string>
+    <string name="firebase_status_fmt">Firebase User: %s</string>
+    <string name="title_activity_base">BaseActivity</string>
+    <string name="title_activity_glogin">GLoginActivity</string>
+    <string name="btn_cancel">Cancel</string>
+    <string name="btn_ok">Ok</string>
+    <string name="title_delete_entry">Delete Entry</string>
+    <string name="cnt_delete_entry">Are you sure you want to delete this entry?</string>
 </resources>
