--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,13 +14,17 @@
     <string name="google_title_text">Google</string>
     <string name="disconnect">Disconnect</string>
     <string name="sign_out">Signout</string>
-    <string name="loading">loading...</string>
+    <string name="loading">loading…</string>
     <string name="google_status_fmt">Google User: %s</string>
     <string name="firebase_status_fmt">Firebase User: %s</string>
     <string name="title_activity_base">BaseActivity</string>
     <string name="title_activity_glogin">GLoginActivity</string>
     <string name="btn_cancel">Cancel</string>
-    <string name="btn_ok">Ok</string>
+    <string name="btn_ok">OK</string>
     <string name="title_delete_entry">Delete Entry</string>
     <string name="cnt_delete_entry">Are you sure you want to delete this entry?</string>
+    <string name="title_logout">Signout</string>
+    <string name="title_signout">Signout</string>
+    <string name="cnt_signout">Are you sure you want to logout?</string>
+    <string name="cnt_delete__all">Are you sure you want to delete all your entries</string>
 </resources>
