--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,9 @@
 <resources>
     <string name="app_name">JournalApp</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_edit">EditActivity</string>
-    <string name="enter_entry">Please enter your tought here</string>
+    <string name="title_activity_edit">Edit</string>
+    <string name="enter_entry">Please enter your thought here</string>
     <string name="action_add_sample_data">Add sample data</string>
-    <string name="enter_note">Enter note</string>
-    <string name="delete_all">Delete all notes</string>
-    <string name="new_note">New note</string>
-    <string name="edit_note">Edit note</string>
     <string name="delete">Delete</string>
     <string name="title_activity_google_sign_in">GoogleSignInActivity</string>
     <string name="signed_out">Signout</string>
@@ -17,8 +13,6 @@
     <string name="loading">loading…</string>
     <string name="google_status_fmt">Google User: %s</string>
     <string name="firebase_status_fmt">Firebase User: %s</string>
-    <string name="title_activity_base">BaseActivity</string>
-    <string name="title_activity_glogin">GLoginActivity</string>
     <string name="btn_cancel">Cancel</string>
     <string name="btn_ok">OK</string>
     <string name="title_delete_entry">Delete Entry</string>
@@ -27,4 +21,7 @@
     <string name="title_signout">Signout</string>
     <string name="cnt_signout">Are you sure you want to logout?</string>
     <string name="cnt_delete__all">Are you sure you want to delete all your entries</string>
+    <string name="delete_all">Delete all entries</string>
+    <string name="new_entry">new entry</string>
+    <string name="edit_entry">edit entry</string>
 </resources>
